Changed deprecated function call